--- a/galeri.html
+++ b/galeri.html
@@ -96,7 +96,7 @@
                     <div class="overlay-slide">
                         <img src="assets/img/gal2.png" alt="" class="img-fluid galeri2">
                         <div class="desc">
-                            <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                            <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                             <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                             <div class="overlay-slide">
                                 <img src="assets/img/gal3.png" alt="" class="img-fluid galeri3">
                                 <div class="desc">
-                                    <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                    <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                     <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
                             <div class="overlay-slide">
                                 <img src="assets/img/gal4.png" alt="" class="img-fluid galeri4">
                                 <div class="desc">
-                                    <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                    <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                     <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                                 <div class="overlay-slide">
                                     <img src="assets/img/gal2.png" alt="" class="img-fluid galeri2">
                                     <div class="desc">
-                                        <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                        <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                         <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal3.png" alt="" class="img-fluid galeri3">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -155,7 +155,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal4.png" alt="" class="img-fluid galeri4">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -182,7 +182,7 @@
                                 <div class="overlay-slide">
                                     <img src="assets/img/gal2.png" alt="" class="img-fluid galeri2">
                                     <div class="desc">
-                                        <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                        <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                         <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                     </div>
                                 </div>
@@ -191,7 +191,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal3.png" alt="" class="img-fluid galeri3">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -200,7 +200,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal4.png" alt="" class="img-fluid galeri4">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -227,7 +227,7 @@
                                 <div class="overlay-slide">
                                     <img src="assets/img/gal2.png" alt="" class="img-fluid galeri2">
                                     <div class="desc">
-                                        <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                        <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                         <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                     </div>
                                 </div>
@@ -236,7 +236,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal3.png" alt="" class="img-fluid galeri3">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -245,7 +245,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal4.png" alt="" class="img-fluid galeri4">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -272,7 +272,7 @@
                                 <div class="overlay-slide">
                                     <img src="assets/img/gal2.png" alt="" class="img-fluid galeri2">
                                     <div class="desc">
-                                        <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                        <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                         <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                     </div>
                                 </div>
@@ -281,7 +281,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal3.png" alt="" class="img-fluid galeri3">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -290,7 +290,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal4.png" alt="" class="img-fluid galeri4">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -317,7 +317,7 @@
                                 <div class="overlay-slide">
                                     <img src="assets/img/gal2.png" alt="" class="img-fluid galeri2">
                                     <div class="desc">
-                                        <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                        <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                         <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                     </div>
                                 </div>
@@ -326,7 +326,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal3.png" alt="" class="img-fluid galeri3">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
@@ -335,7 +335,7 @@
                                         <div class="overlay-slide">
                                             <img src="assets/img/gal4.png" alt="" class="img-fluid galeri4">
                                             <div class="desc">
-                                                <small class="text-muted mt-0">Ahad, 21-01-2020</small>
+                                                <p class="text-muted mt-0">Ahad, 21-01-2020</p>
                                                 <h5 class="card-title">Memperingati Isra' Mi'raj</h5>
                                             </div>
                                         </div>
