--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,8 @@
     <!-- fancybox css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
+
+
 </head>
 <body class="bg-light">
     
@@ -76,10 +78,10 @@
     <!-- kontak -->
     <section class="kontak" id="kontak">
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3">
+            <div class="col-3">
                 <img src="assets/img/bg-cewek.png" alt="" class="img-fluid bg-cewek">
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 kontak">
+            <div class="col-6 kontak">
                 <h2>Kontak Kami</h2>
                 <p>Kontak kami untuk informasi lebih lanjut.</p>
                 <form action="/action_page.php">
@@ -98,7 +100,7 @@
                 </form>
                 <a href="#" class="btn btn-success btn-block">Kirim</a>
             </div>
-            <div class=" col-lg-3 col-md-3 col-sm-3">
+            <div class="col-3">
                 <img src="assets/img/bg-cowok.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
