--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <!-- fancybox css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
-    
 </head>
 <body class="bg-light">
 
@@ -76,10 +75,10 @@
     <!-- hero -->
     <section class="hero" id="hero">
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3">
+            <div class="col-3">
                 <img src="assets/img/bg-cewek.png" alt="" class="img-fluid bg-cewek">
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-6">
                 <div class="my-slider">
                     <div class="hero-body">
                         <h2>Their Favourite Choice in Bondowoso</h2>
@@ -99,7 +98,7 @@
                     
                 </div>
             </div>
-            <div class=" col-lg-3 col-md-3 col-sm-3">
+            <div class="col-3">
                 <img src="assets/img/bg-cowok.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
@@ -110,13 +109,13 @@
     <section class="about" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 desc">
+                <div class="col-lg-4 col-md-12 col-sm-12 desc">
                     <h3>Tentang MI At-Taqwa</h3>
                     <p>MI AT - TAQWA Bondowoso adalah Lembaga Pendidikan favorit dikota Bondowoso dengan menyelenggarakan pendidikan dan pembelajaran yang berorientasi pada terbentuknya peserta didik yang beriman, bertaqwa, dan berakhlaq mulia atas dasar nilai-nilai Islam ala Ahlus Sunnah Wal Jama’ah an Nahdliyah. Madrasah kami pun turut menjaga tradisi lama yang baik dan mengambil perkembangan baru yang lebih baik.</p>
                     <a href="#" class="btn btn-success">Selengkapnya <i class="fa fa-arrow-right"></i> </a>
                 </div>
-                <div class="col-lg-8 col-md-6 col-sm-12 img">
-                    <div class="img-one img-fluid">
+                <div class="col-lg-8 col-md-12 col-sm-12 img">
+                    <div class="img-one">
                         <img src="assets/img/about1.png" alt="" class="img-fluid">
                         <div class="youtube">
                             <a href="https://youtu.be/jsnUVV9rtjM" data-fancybox>
@@ -124,7 +123,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="img-two img-fluid">
+                    <div class="img-two">
                         <img src="assets/img/about2.png" alt="" class="img-fluid">
                     </div>
                     <div class="arrow text-right">
