--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     <!-- hero -->
     <section class="hero" id="hero">
         <div class="row">
-            <div class="col-3">
+            <div class="col-6 col-md-3">
                 <img src="assets/img/bg-cewek.png" alt="" class="img-fluid bg-cewek">
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 <div class="my-slider">
                     <div class="hero-body">
                         <h2>Their Favourite Choice in Bondowoso</h2>
@@ -98,7 +98,7 @@
                     
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-6 col-md-3 d-sm-none">
                 <img src="assets/img/bg-cowok.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
