--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     
                 </div>
             </div>
-            <div class="col-6 col-md-3 d-sm-none">
+            <div class="col-6 col-md-3">
                 <img src="assets/img/bg-cowok.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
