--- a/artikel.html
+++ b/artikel.html
@@ -83,7 +83,7 @@
                         <img src="assets/img/artikel_terbaru_1.png" alt="" class="img img-fluid art_ter_1">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
-                            <h5>MENGGABUNGKAN PUASA RAJAB DAN PUASA QADLA</h5>
+                            <h5> <a href="detail-artikel.html"> MENGGABUNGKAN PUASA RAJAB DAN PUASA QADLA</a></h5>
                             <small class="date"><i class="fas fa-calendar-alt mr-2" style="margin-top: 0px;"></i> Ahad, 21-01-2020</small>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                         <img src="assets/img/artikel_terbaru_2.png" alt="" class="img img-fluid art_ter_2">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
-                            <h5>ETIKA MENCARI RIZQI</h5>
+                            <h5> <a href="detail-artikel.html">ETIKA MENCARI RIZQI</a></h5>
                             <small class="date"><i class="fas fa-calendar-alt mr-2" style="margin-top: 60px;"></i> Ahad, 21-01-2020</small>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                         <img src="assets/img/artikel_terbaru_3.png" alt="" class="img img-fluid art_ter_3">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
-                            <h5>PENTINGNYA KEBERSIHAN</h5>
+                            <h5> <a href="detail-artikel.html">PENTINGNYA KEBERSIHAN</a></h5>
                             <small class="date"><i class="fas fa-calendar-alt mr-2" style="margin-top: 30px;"></i> Ahad, 21-01-2020</small>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                         <img src="assets/img/artikel_terbaru_4.png" alt="" class="img img-fluid art_ter_4">
                         <div class="desc">
                             <a href="detail-artikel.html" class="btn btn-success">Terbaru</a>
-                            <h5>AMALAN 10 HARI AKHIR RAMADHAN</h5>
+                            <h5> <a href="detail-artikel.html">AMALAN 10 HARI AKHIR RAMADHAN</a></h5>
                             <small class="date"><i class="fas fa-calendar-alt mr-2" style="margin-top: 30px;"></i> Ahad, 21-01-2020</small>
                         </div>
                     </div>
@@ -129,14 +129,14 @@
                             <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="media">
                                     <div class="overlay-slide">
-                                        <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="...">
-                                    <div class="desc">
-                                        <h5>Ahad, 21-01-2020 - Azam Najib</h5>
-                                    </div>
+                                        <img src="assets/img/artikel_menarik_1.png" class="mr-3 img-fluid" alt="..."> 
+                                        <div class="desc">
+                                            <h5>Ahad, 21-01-2020 - Azam Najib</h5>
+                                        </div>
                                     </div>
                                     <div class="media-body">
                                         <h3>Menggabungkan Puasa Rajab dan Puasa Qadla</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor.. <a href="#" class="link">Selengkapnya</a> </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor.. <a href="#" class="link">Selengkapnya</a></p>
                                     </div>
                                 </div>
                             </div>
