--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,10 @@
     <!-- kontak -->
     <section class="kontak" id="kontak">
         <div class="row">
-            <div class="col-3">
+            <div class="col-6 col-md-3">
                 <img src="assets/img/bg-cewek.png" alt="" class="img-fluid bg-cewek">
             </div>
-            <div class="col-6 kontak">
+            <div class="col-12 col-md-6 contact" style="display:inline-block; width:80%; padding: 0 50px;">
                 <h2>Kontak Kami</h2>
                 <p>Kontak kami untuk informasi lebih lanjut.</p>
                 <form action="/action_page.php">
@@ -100,7 +100,7 @@
                 </form>
                 <a href="#" class="btn btn-success btn-block">Kirim</a>
             </div>
-            <div class="col-3">
+            <div class="col-6 col-md-3">
                 <img src="assets/img/bg-cowok.png" alt="" class="img-fluid bg-cowok">
             </div>
         </div>
